--- a/JS/desafioTela.html
+++ b/JS/desafioTela.html
@@ -35,8 +35,8 @@
                 Voltar  
             </a>
         </div>
-        <p style="text-align: center;"id="txtcentro">
-            teste
+        <p style="text-align: center;" id="txtcentro">
+           
         </p>
     </div>
 </body>
@@ -48,14 +48,20 @@
         //for (i=0;i<=3;i++){
         //texto[0].innerHTML('teste');
         //}
-        let txt = "texto "+ menu;
+        //let txt = "texto "+ menu;
         //alert(txt);
-        document.getElementById('txtcentro').innerHTML("Texto 1");
-        document.getElementById('ladoesquerdo').style.width("10vw");
-        document.getElementById('ladodireito').style.background("red");
+        document.getElementById("txtcentro").innerHTML("<h1>Texto 1</h1>");
+        //document.getElementById('ladoesquerdo').style.width("10vw");
+        //document.getElementById("ladodireito").style.color("blue");
+       // alert(menu);
     }
     function expandeMenu(){
-
+        let elemento1 = document.getElementById("ladodireito");
+        elemento1.innerHTML("teste");
+        alert("teste");
     }
 </script>
+<noscript>
+        JS está desabilitado
+</noscript>
 </html>
